creation d'une route qui gère chaque collection (sauf user et character)
